--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <h1 class="title">Mi calculadora</h1>
     <div class="calculadora-grilla">
         <div class="output">
             <input class="display" type="text" id="result" placeholder="0">
