--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"> 
-    <title>Calculadora Elvis</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
